update:开启权限验证
