# controller/course_controller.go
@@ -18,11 +18,10 @@ var CourseControllerInstance = CourseController{}
 // @Summary      搜索菜品
 // @Description  根据关键字搜索菜品
 // @Tags         菜品
-// @Produce      json
-// @Responses    json
-// @Param    keyword   query  string  true  "关键词"
-// @Param    pageNum   query  int     true  "页数"
-// @Param    pageSize  query  int     true  "页面大小"
+// @Security     ApiAuthToken
+// @Param     keyword   query  string  true  "关键词"
+// @Param     pageNum   query  int     true  "页数"
+// @Param     pageSize  query  int     true  "页面大小"
 // @Success      200       {object}  response.Result
 // @Router       /course/search [GET]
 func (*CourseController) SearchCourse(ctx *gin.Context) {
@@ -48,13 +47,14 @@ func (*CourseController) SearchCourse(ctx *gin.Context) {
 }
 
 // QueryCourse 查找菜品
-// @Summary  查找菜品
-// @Tags     菜品
-// @Param    by        query  string  true  "查找类型，可选: tag"
+// @Summary   查找菜品
+// @Tags      菜品
+// @Security  ApiAuthToken
+// @Param     by        query  string  true  "查找类型，可选: tag"
 // @Param        keyword   query     string  true  "关键词"
 // @Param        pageNum   query     int     true  "页数"
 // @Param        pageSize  query     int     true  "页面大小"
-// @Router   /course/query [GET]
+// @Router    /course/query [GET]
 func (*CourseController) QueryCourse(ctx *gin.Context) {
 	queryType := ctx.Query("by")
 	keyword := ctx.Query("keyword")
@@ -78,10 +78,11 @@ func (*CourseController) QueryCourse(ctx *gin.Context) {
 }
 
 // GetCourseDetail 获取菜品详情
-// @Summary  获取菜品详情
-// @Tags     菜品
-// @Param    courseId  path  string  true  "菜品id"
-// @Router   /course/{courseId} [GET]
+// @Summary   获取菜品详情
+// @Tags      菜品
+// @Security  ApiAuthToken
+// @Param     courseId  path  string  true  "菜品id"
+// @Router    /course/{courseId} [GET]
 func (*CourseController) GetCourseDetail(ctx *gin.Context) {
 	courseId := ctx.Param("courseId")
 	detail, err := service.CourseService.GetCourseDetail(courseId)
@@ -94,9 +95,10 @@ func (*CourseController) GetCourseDetail(ctx *gin.Context) {
 }
 
 // GetRecommendCourseList 获取推荐列表
-// @Summary  获取推荐列表
-// @Tags     菜品
-// @Router   /course/recommend [GET]
+// @Summary   获取推荐列表
+// @Tags      菜品
+// @Security  ApiAuthToken
+// @Router    /course/recommend [GET]
 func (*CourseController) GetRecommendCourseList(ctx *gin.Context) {
 	courseList, err := service.CourseService.GetCourseRecommendation()
 	if err != nil {
@@ -108,10 +110,11 @@ func (*CourseController) GetRecommendCourseList(ctx *gin.Context) {
 }
 
 // UploadCourse 上传菜品
-// @Summary  上传菜品
-// @Tags     菜品
-// @Param    dto  body  dto.CourseDto  true  "菜品详情"
-// @Router   /course [POST]
+// @Summary   上传菜品
+// @Tags      菜品
+// @Security  ApiAuthToken
+// @Param     body  body  dto.CourseDto  true  "菜品详情"
+// @Router    /course [POST]
 func (*CourseController) UploadCourse(ctx *gin.Context) {
 	request := ctx.Request
 	bodyByte, err := ioutil.ReadAll(request.Body)
@@ -133,11 +136,12 @@ func (*CourseController) UploadCourse(ctx *gin.Context) {
 }
 
 // UpdateCourse 更新菜品
-// @Summary  更新菜品
-// @Tags     菜品
-// @Param    courseId  path  string         true  "courseId"
-// @Param    dto       body  dto.CourseDto  true  "菜品详情"
-// @Router   /course/{courseId} [PUT]
+// @Summary   更新菜品
+// @Tags      菜品
+// @Security  ApiAuthToken
+// @Param     courseId  path  string         true  "courseId"
+// @Param     body      body  dto.CourseDto  true  "菜品详情"
+// @Router    /course/{courseId} [PUT]
 func (*CourseController) UpdateCourse(ctx *gin.Context) {
 	request := ctx.Request
 	courseId := ctx.Param("courseId")
@@ -163,10 +167,11 @@ func (*CourseController) UpdateCourse(ctx *gin.Context) {
 }
 
 // DeleteCourse 删除菜品
-// @Summary  删除菜品
-// @Tags     菜品
-// @Param    courseId  path  string  true  "courseId"
-// @Router   /course/{courseId} [DELETE]
+// @Summary   删除菜品
+// @Tags      菜品
+// @Security  ApiAuthToken
+// @Param     courseId  path  string  true  "courseId"
+// @Router    /course/{courseId} [DELETE]
 func (*CourseController) DeleteCourse(ctx *gin.Context) {
 	courseId := ctx.Param("courseId")
 	userId := ctx.Request.Header.Get("userId")
