# controller/tag_controller.go
@@ -11,10 +11,11 @@ type TagController struct{}
 var TagControllerInstance = TagController{}
 
 // GetTagList 获取标签列表
-// @Tags     标签
-// @Summary  获取标签列表
-// @Param    typeId  path  string  true  "tagTypeId"
-// @Router   /tag/type/{tagTypeId} [GET]
+// @Tags      标签
+// @Summary   获取标签列表
+// @Security  ApiAuthToken
+// @Param     typeId  path  string  true  "tagTypeId"
+// @Router    /tag/type/{tagTypeId} [GET]
 func (*TagController) GetTagList(ctx *gin.Context) {
 
 	tagTypeId := ctx.Param("tagTypeId")
@@ -33,9 +34,10 @@ func (*TagController) GetTagList(ctx *gin.Context) {
 }
 
 // GetTagTypeList 获取标签种类列表
-// @Tags     标签
-// @Summary  获取标签种类列表
-// @Router   /tag/type/list [GET]
+// @Tags      标签
+// @Summary   获取标签种类列表
+// @Security  ApiAuthToken
+// @Router    /tag/type/list [GET]
 func (*TagController) GetTagTypeList(ctx *gin.Context) {
 	list, err := service.TagService.GetTagTypeList()
 	if err != nil {
