# dto/user_info_dto.go
@@ -1,0 +1,7 @@
+package dto
+
+type UserInfoDto struct {
+	NickName string `example:"傻逼"`
+	Gender   int
+	Birthday int64
+}
